--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
                 <div id="popoutbio"><p class="paragraph"><br/>
                     Nebraska Death                    
                     <br/><br/>
+                     Vocals: Kelynn Lynch
+                     <br/>
+                     Guitar: Zack Gearhart
+                     <br/>
+                     Guitar: Isaac Utecht
+                     <br/>
+                     Bass: Kai Kelly
+                     <br/>
+                     Drums: Josh Halpine
+                     <br/><br/>
                     <a href="mailto:bodycorrosion@gmail.com">Contact Us</a>
                     <br/><br/>
                     </p></div></center>
