--- a/index.html
+++ b/index.html
@@ -41,13 +41,11 @@
                 <div id="popoutbio"><p class="paragraph"><br/>
                     Nebraska Death                    
                     <br/><br/>
-                     Vocals: Kelynn Lynch
-                     <br/>
-                     Guitar: Zack Gearhart
+                     Guitar / Vocals: Zack Gearhart
                      <br/>
                      Guitar: Isaac Utecht
                      <br/>
-                     Bass: Kai Kelly
+                     Bass / Vocals: Trevor Kreuzberg
                      <br/>
                      Drums: Josh Halpine
                      <br/><br/>
